# knxtinyserial

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeToolchainFile-Raspberry.cmake  CMakeToolchainFile-RaspberryGCC6.cmake  Config.h.in  README.md
common/: Utils.cpp  Utils.h  log.h
knxread/: CMakeLists.txt  ReadManager.cpp  ReadManager.h  Settings.cpp  Settings.h  main.cpp
knxsend/: CMakeLists.txt  Settings.cpp  Settings.h  main.cpp
lib/: CMakeLists.txt  KnxTinySerial.cpp  KnxTinySerial.h  KnxTinySerial.pc.in
serialtest/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  KnxTinySerial.cpp  KnxTinySerial.h  main.cpp
