set(TARGET_NAME KnxTinySerial)

file(GLOB_RECURSE TARGET_SOURCES
    *.cpp
    ${CMAKE_SOURCE_DIR}/common/*.cpp
)
file(GLOB_RECURSE TARGET_HEADERS
    ${CMAKE_SOURCE_DIR}/common/*.h
    *.h
)

add_library(${TARGET_NAME} SHARED
    ${TARGET_SOURCES}
    ${TARGET_HEADERS}
)

target_include_directories(${TARGET_NAME}
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
  PRIVATE
    ${CMAKE_SOURCE_DIR}/common
)

set_target_properties(${TARGET_NAME} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION 1
    PUBLIC_HEADER "KnxTinySerial.h")

install (TARGETS ${TARGET_NAME}
    DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

# generate pkg-file
configure_file(${TARGET_NAME}.pc.in ${TARGET_NAME}.pc @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}.pc
    DESTINATION ${CMAKE_INSTALL_DATADIR}/pkgconfig)
